--- a/4_models/graphical.ipynb
+++ b/4_models/graphical.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Mixture Models"
+    "# Graphical Models"
    ]
   },
   {
@@ -13,14 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Generative Model\n",
-    "\n",
-    "* Parametric Model\n",
-    "\n",
-    "|                | Generative | Discriminative |\n",
-    "|------------    |------------|----------------|\n",
-    "| **Parametric**     |  ✅       |                |\n",
-    "| **Non parameteric**|            |                |"
+    "Graphical model is a probabilistic model for which a graph expresses the conditional dependence structure between random variables. They are commonly used in probability theory, statistics - particularly Bayesian statistics - and machine learning."
    ]
   },
   {
@@ -28,9 +21,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The optimization algorithms are: \n",
     "\n",
-    "1. How is Nearest Neighbor even an algorithm? \n",
-    "2. Are all regression models generative? "
+    "1. EM Algorithm\n",
+    "2. Gradient Descent\n",
+    "3. Backpropagation\n",
+    "4. Gibbs Sampling"
    ]
   }
  ],
