--- a/1_programming/32_scraping.ipynb
+++ b/1_programming/32_scraping.ipynb
@@ -9,18 +9,482 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "print('Hello world')"
+    "Web scraping is a technique to automatically access and extract large amounts of information from a website, which can save a huge amount of time and effort. In this article, we will go through an easy example of how to automate downloading hundreds of files from the New York MTA. This is a great exercise for web scraping beginners who are looking to understand how to web scrape. We’ll be extracting information from this web page: http://web.mta.info/developers/turnstile.html"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'bs4.BeautifulSoup'>\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "MTA Subway Hourly Ridership: Beginning February 2022 | State of New York\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "        Skip to Main Content\n",
+      "      \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "DATA.NY.GOV\n",
+      "\n",
+      "\n",
+      "\n",
+      "Sign In\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "EnglishEnglishEspañolItalianoFrançais中文Русский\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "Search\n",
+      "\n",
+      "\n",
+      "          Search\n",
+      "      \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      " \n",
+      " \n",
+      " \n",
+      " \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "OPEN NYCATALOGDEVELOPERSHELPVIDEO HELPSUPPORTED BROWSERSCATALOG NAVIGATIONABOUTPRESS RELEASESEXECUTIVE ORDEROPEN DATA PROGRAM OVERVIEWOPEN DATA HANDBOOKDATASET SUBMISSION GUIDEREPORTS\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "            Menu\n",
+      "          \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "Menu\n",
+      "\n",
+      "Close\n",
+      "\n",
+      "\n",
+      "OPEN NYCATALOGDEVELOPERSHELPVIDEO HELPSUPPORTED BROWSERSCATALOG NAVIGATIONABOUTPRESS RELEASESEXECUTIVE ORDEROPEN DATA PROGRAM OVERVIEWOPEN DATA HANDBOOKDATASET SUBMISSION GUIDEREPORTS\n",
+      "\n",
+      "Sign In\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "Search\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      " \n",
+      " \n",
+      " \n",
+      " \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "    Language\n",
+      "    \n",
+      "\n",
+      "\n",
+      "English\n",
+      "Español\n",
+      "Italiano\n",
+      "Français\n",
+      "中文\n",
+      "Русский\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      " \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      " \n",
+      " \n",
+      "\n",
+      "\n",
+      " \n",
+      " \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "MTA Subway Hourly Ridership: Beginning February 2022 | State of New York\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "        Skip to Main Content\n",
+      "      \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "DATA.NY.GOV\n",
+      "\n",
+      "\n",
+      "\n",
+      "Sign In\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "EnglishEnglishEspañolItalianoFrançais中文Русский\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "Search\n",
+      "\n",
+      "\n",
+      "          Search\n",
+      "      \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      " \n",
+      " \n",
+      " \n",
+      " \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "OPEN NYCATALOGDEVELOPERSHELPVIDEO HELPSUPPORTED BROWSERSCATALOG NAVIGATIONABOUTPRESS RELEASESEXECUTIVE ORDEROPEN DATA PROGRAM OVERVIEWOPEN DATA HANDBOOKDATASET SUBMISSION GUIDEREPORTS\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "            Menu\n",
+      "          \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "Menu\n",
+      "\n",
+      "Close\n",
+      "\n",
+      "\n",
+      "OPEN NYCATALOGDEVELOPERSHELPVIDEO HELPSUPPORTED BROWSERSCATALOG NAVIGATIONABOUTPRESS RELEASESEXECUTIVE ORDEROPEN DATA PROGRAM OVERVIEWOPEN DATA HANDBOOKDATASET SUBMISSION GUIDEREPORTS\n",
+      "\n",
+      "Sign In\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "Search\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      " \n",
+      " \n",
+      " \n",
+      " \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "    Language\n",
+      "    \n",
+      "\n",
+      "\n",
+      "English\n",
+      "Español\n",
+      "Italiano\n",
+      "Français\n",
+      "中文\n",
+      "Русский\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      " \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      " \n",
+      " \n",
+      "\n",
+      "\n",
+      " \n",
+      " \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Import libraries\n",
+    "import urllib.request\n",
+    "from bs4 import BeautifulSoup\n",
+    "\n",
+    "# Specify url\n",
+    "urlpage =  'http://web.mta.info/developers/turnstile.html'\n",
+    "\n",
+    "# Query the website and return the html to the variable 'page'\n",
+    "page = urllib.request.urlopen(urlpage)\n",
+    "\n",
+    "# Parse the html using beautiful soup and store in variable 'soup'\n",
+    "soup = BeautifulSoup(page, 'html.parser')\n",
+    "\n",
+    "# Print out the type of the variable 'soup'\n",
+    "print(type(soup))\n",
+    "\n",
+    "# Find all the links on the page\n",
+    "soup.findAll('a', href=True)\n",
+    "\n",
+    "# Let's extract all the text from the page\n",
+    "print(soup.text)\n",
+    "\n",
+    "# Find all the links on the page\n",
+    "soup.findAll('a', href=True)\n",
+    "\n",
+    "# Let's extract all the text from the page\n",
+    "print(soup.text)\n"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.12"
   },
   "orig_nbformat": 4
  },
