--- a/1_programming/10_dataops.ipynb
+++ b/1_programming/10_dataops.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Fast Operations on Data"
+    "# Vectorized Operations on Data"
    ]
   },
   {
